add amazon links

--- a/oblong.html
+++ b/oblong.html
@@ -70,6 +70,10 @@
         border-radius: 10px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
+
+    ul > * {
+        margin-top: 10px;
+    }
 </style>
 
 <body>
@@ -128,6 +132,13 @@ In oblongs, unique glory exists.</pre>
     <h1>Please enjoy this oblong video game console</h1>
     <canvas id="canvas" width="1000" height="600"></canvas>
 
+    <h1>Now, a list of my favorite amazon products</h1>
+    <ul>
+        <li><a href="https://www.amazon.com/Pyrex-Basics-Quart-Oblong-Baking/dp/B00G9HM7U4/ref=sr_1_3?crid=1G28D3CJIAS35&keywords=oblong&qid=1691970435&sprefix=oblo%2Caps%2C205&sr=8-3">Pyrex Basics 2 Quart Glass <b>Oblong</b> Baking Dish, Clear 7 x 11 inch (Pack of 2)</a></li>
+        <li><a href="https://www.amazon.com/UGG-Oblong-Faux-Scarf-Nimbus/dp/B0B6SMDR1X/ref=sr_1_7?crid=1G28D3CJIAS35&keywords=oblong&qid=1691970435&sprefix=oblo%2Caps%2C205&sr=8-7">UGG <b>Oblong</b> Faux Fur Scarf<a></li>
+        <li><a href="https://www.amazon.com/Kate-Spade-New-York-Oblong/dp/B0C1DKFTH8/ref=sr_1_41?crid=1G28D3CJIAS35&keywords=oblong&qid=1691970435&sprefix=oblo%2Caps%2C205&sr=8-41">Kate Spade New York Mixed Dot <b>Oblong</b> Scarf<a></li>
+        <li><a href="https://www.amazon.com/Misfit-Love/dp/B00HVR89L2/ref=sr_1_2?crid=1G28D3CJIAS35&keywords=oblong&qid=1691970435&sprefix=oblo%2Caps%2C205&sr=8-2">The <b>Oblongs</b>: Complete Series(2001)<a></li>
+    </ul>
     <script>
         // Setting up the canvas
         const canvas = document.getElementById("canvas");
