--- a/oblong.html
+++ b/oblong.html
@@ -74,9 +74,20 @@
     ul > * {
         margin-top: 10px;
     }
+
+    hr {
+        margin-bottom: 40px;
+        background-color: #0066cc;
+        height: 2px;
+        width: 100%;
+        border: none;
+    }
 </style>
 
 <body>
+    <h1>Welcom to OBLONG: The home for all things oblong</h1>
+    <hr>
+
     <h1>My Favorite Oblong Objects</h1>
 
     <h2>1. Watermelon</h2>
