--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ In oblongs, unique glory exists.</pre>
         <li><a href="https://www.amazon.com/Misfit-Love/dp/B00HVR89L2/ref=sr_1_2?crid=1G28D3CJIAS35&keywords=oblong&qid=1691970435&sprefix=oblo%2Caps%2C205&sr=8-2">The <b>Oblongs</b>: Complete Series(2001)</a></li>
     </ul>
 
-    <footer>PLEASE CONTRIBUTE MORE OBLONGITY AT </footer>
+    <footer><br><br><br>PLEASE CONTRIBUTE MORE OBLONGITY ON <a href="https://github.com/NalinPlad/oblong-objects">GITHUB</footer>
     <script>
         // Setting up the canvas
         const canvas = document.getElementById("canvas");
