OBLONG height isnt random anymore so remove comment.

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ In oblongs, unique glory exists.</pre>
                 x: canvas.width,
                 y: Math.floor(Math.random() * (canvas.height - 100)), // y position range to avoid collision with canvas borders
                 width: 80,
-                height: 100, // random oblong height
+                height: 100,
                 isPassed: false,
             };
             oblongs.push(oblong);
