obl.ong is life... an essay about ob.long lifestyle

--- a/index.html
+++ b/index.html
@@ -178,6 +178,23 @@ In oblongs, unique glory exists.</pre>
     <h1 id="obl_GAME">Please enjoy this oblong video game console</h1>
     <canvas id="canvas" width="1000" height="600"></canvas>
 
+    <h1 id="obl_POEM"> oblong is the meaning to life.. an essay</h1>
+    <pre>
+        In the fascinating world of OBL.ONG, a realm where creativity knows no bounds and the laws of reality are but mere suggestions, a tapestry of random wonders unfolds. OBL.ONG, a fictional domain of boundless imagination, serves as the backdrop for an exploration of the unexpected and the uncharted. This essay delves into the essence of OBL.ONG, a place where the unconventional thrives and the ordinary transforms into the extraordinary.
+
+In OBL.ONG, the very fabric of existence is woven from the threads of serendipity and curiosity. As one ventures through its surreal landscapes, they encounter sentient clouds that drift along, exchanging cryptic riddles with passing travelers. These ethereal beings, cloaked in mist, embody the essence of OBL.ONG – a place where the inexplicable is the norm and the ordinary is questioned. Conversations with these whimsical clouds often lead to contemplations on the nature of reality itself, as their enigmatic riddles challenge conventional thinking.
+
+Among the enchanting flora that adorn OBL.ONG's vibrant terrain are the Luminescent Whispers – radiant, phosphorescent flowers that emit a harmonious hum when the moonlight caresses their petals. These captivating blooms are said to possess the power to reveal hidden truths to those who listen closely to their gentle melody. They serve as a reminder that even in a world driven by randomness, beauty can emerge in the most unexpected places, casting a luminescent glow on the mysteries that surround us.
+
+Journeying deeper into OBL.ONG, one stumbles upon the Hall of Mirrored Whimsy – a labyrinthine gallery of mirrors that distort not only appearances but also preconceived notions. Reflections morph into abstract expressions, reflecting the kaleidoscope of ideas that OBL.ONG nurtures. Within these mirror-clad walls, perceptions are shattered and rebuilt, encouraging visitors to embrace alternative viewpoints and to challenge their assumptions.
+
+At the heart of OBL.ONG, the Grand Contraption stands as a testament to the inhabitants' commitment to the art of invention. This Rube Goldberg-esque machine, composed of gears, springs, and eccentric contrivances, symbolizes the fusion of randomness and innovation. With each turn of a cog, a cascade of unexpected events unfolds – an embodiment of the unpredictable nature that OBL.ONG champions.
+
+Inhabitants of OBL.ONG, known as "Whimsarians," live in a state of perpetual exploration and inquiry. They gather in grand gatherings known as "Chaos Symposia," where they share tales of their encounters with the bizarre and the extraordinary. In these gatherings, ideas and experiences intertwine, fostering an environment where innovation is nurtured through the embrace of the unknown.
+
+In conclusion, the world of OBL.ONG emerges as a realm where randomness is a cherished companion and the unconventional is celebrated. It is a place where sentient clouds offer cryptic wisdom, luminescent blooms hum with hidden truths, mirrors reflect alternate perspectives, and the Grand Contraption epitomizes the fusion of innovation and unpredictability. As Whimsarians gather to share their experiences, OBL.ONG becomes a testament to the power of curiosity and imagination in shaping a world where the extraordinary flourishes. So, as we bid adieu to OBL.ONG – a realm that exists solely in the realm of fiction – let us carry its lessons with us, embracing the unexpected and seeking inspiration in the whimsical tapestry of life.
+    </pre>
+
     <h1 id="obl_AMAZON">Now, a list of my favorite amazon products</h1>
     <ul>
         <li><a href="https://www.amazon.com/Pyrex-Basics-Quart-Oblong-Baking/dp/B00G9HM7U4/ref=sr_1_3?crid=1G28D3CJIAS35&keywords=oblong&qid=1691970435&sprefix=oblo%2Caps%2C205&sr=8-3">Pyrex Basics 2 Quart Glass <b>Oblong</b> Baking Dish, Clear 7 x 11 inch (Pack of 2)</a></li>
